# xulcan

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/: issue_template.md  pull_request_template.md
.github/workflows/: docker-login.yml  release-silixe.yml  release.yml
app/: healthcheck.py  main.py
app/api/: middleware.py
app/blueprints/: 090326.yml  analist.yml  asis.yml  new.yml  refactor.yml  test.yml  vitrinas.yml
app/core/: logging_config.py
app/xulcan/: __init__.py  app.py  config.py  debugger.py  mack.py  main.py  mock.py  tui.py
app/xulcan/api/: __init__.py  middleware.py
app/xulcan/blueprint/: __init__.py  components.py  schema.py  types.py
app/xulcan/bus/: base.py
app/xulcan/context/: base.py
app/xulcan/contracts/: __init__.py  governance.py  model.py  snapshot.py  strategy.py
app/xulcan/core/: __init__.py  economics.py  logging_config.py  primitives.py  types.py
app/xulcan/kernel/: run.py  (+6 more)
docs/: GETTING_STARTED.md  ORCHESTRATION_EXAMPLES.md  README.ar.md  README.es.md  README.fr.md  README.ru.md  README.zh.md  XULCAN_ORCHESTRATION_SPEC.md
nexus/: index.html
scripts/: README.md  clean.sh  dev.sh  setup_dev_secrets.sh  test.sh  test_core_connection.py
tests/: conftest.py  test_config.py  test_main.py
tests/core/: test_logging_config.py
tests/stress/: test_fuzz_base.py
tests/utils/: unicode.py
tests/xulcan/: conftest.py  test_app_discovery.py  test_config.py  test_logging_config.py  test_main.py
(+143 files in other folders)
