[build-system]
requires =["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xulcan"
version = "0.2.0"
description = "Xulcan Agent OS - A State-of-the-Art LLM Agent Framework"
readme = "README.md"
requires-python = ">=3.10"
dependencies =[
    "fastapi>=0.109.2",
    "uvicorn[standard]>=0.27.1",
    "pydantic>=2.6.1",
    "pydantic-settings>=2.1.0",
    "PyYAML>=6.0.1",
    "tenacity>=8.2.3",
    "openai>=1.12.0",
    "anthropic>=0.18.1",
    "google-genai>=0.5.0",
    "ollama>=0.3.0",
    "asyncpg>=0.29.0",
    "sqlalchemy>=2.0.27",
    "redis>=5.0.1",
    "structlog>=24.1.0",
    "Jinja2>=3.1.3",
    "docker>=7.1.0",
    "typer>=0.9.0",
    "rich>=13.7.0",      
]

[tool.setuptools.packages.find]
where = ["app"]
include = ["xulcan*"]
